update inventory files

--- a/inventory_vars.yml
+++ b/inventory_vars.yml
@@ -3,16 +3,12 @@ all:
     webservers:
       hosts:
         webserver1:
-          ansible_host: <IP or hostname of the Windows server>
-          ansible_connection: winrm
-          ansible_winrm_transport: ntlm
-          ansible_winrm_server_cert_validation: ignore
-          ansible_user: <username with administrative privileges>
-          ansible_password: <password for the username>
-        webserver2:    
-          ansible_host: <If you have one, IP or hostname of the second Windows server>
-          ansible_connection: winrm
-          ansible_winrm_transport: ntlm
-          ansible_winrm_server_cert_validation: ignore
-          ansible_user: <username with administrative privileges>
-          ansible_password: <password for the username>
+          ansible_host: 54.193.204.84
+
+vars:     
+  ansible_connection: winrm
+  ansible_winrm_transport: ntlm
+  ansible_winrm_server_cert_validation: ignore
+  ansible_user: Administrator
+  ansible_password: JustM300
+      
